ChangeLog
=========

0.3.0.dev
    * fix update file structure
    * add commands DELETE_FILE,DELETE_DIRECTORY,CREATE_DIRECTORY
    * add error.ErrorState - chained error state infrastructure
    * rename metadata.*filaname to metadata.*path where appropriate
    * check gcode extensions ".gcode", ".gc", ".g", ".gco" for FDM
    * bugfix: don't fail on extracting metadata from non-existing files
    * introduce basic ErrorState instances in errors.py and use in __init__.py
    * introduce errors.TOKEN signaling if a token is available
    * add ironing to FDM metadata
    * introduce `File.size` as a settable property
    * added functions for save/load cache of data
    * fix event data structure
    * new STOPPED state
    * typed package
    * load() function and test_metadata modification
    * cache file name modification
    * if metadata are empty, cache is not created
    * No notification handler
    * No communication without token
    * automatically creating and delete cache using inotify handler
    * SDK ignores hidden .<filename> files

0.2.0 (2020-12-14)

    * get_token method called in Printer.loop
    * Python 3.9 check
    * api_key in INFO event
    * metadata in file_info
    * preview in metadata

0.1.3 (2020-12-01)

    * Printer object without sn, fingerprint, server and token
    * Revert ability to use any Command class as it seems too confusing